--- a/views/restaurants.ejs
+++ b/views/restaurants.ejs
@@ -22,6 +22,7 @@
       <ul id="restaurants-list">
         <!-- opening brace -->
         <%for (const restaurant of restaurants) { %>
+        <!-- keyname restaurants -->
         <!-- li fragment -->
         <%- include('includes/restaurant-items/restaurant-item',{restaurant:
         restaurant}) %>
