--- a/public/styles/restaurants.css
+++ b/public/styles/restaurants.css
@@ -42,15 +42,19 @@ main {
   text-align: right;
 }
 
-.restaurant-actions a {
+.restaurant-actions a,
+.order-btn {
   padding: 0.5rem 1.5rem;
   background-color: rgb(202, 158, 62);
   border-radius: 4px;
   color: white;
   text-decoration: none;
+  cursor: pointer;
+  border: none;
 }
 
 .restaurant-actions a:hover,
-.restaurant-actions a:active {
-  background-color: rgb(202, 141, 62);
+.restaurant-actions a:active,
+.order-btn:hover {
+  background-color: rgb(138, 79, 2);
 }
